--- a/MultiBaseCalc/Views/Shared/_Layout.cshtml
+++ b/MultiBaseCalc/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" asp-area="" asp-controller="Conversion" asp-action="Index">Conversion</a>
-                                <a class="dropdown-item" href="#">Another action</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="BinaryCode" asp-action="Index">BinaryCode</a>
                                 <a class="dropdown-item" href="#">Something else here</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Separated link</a>
