--- a/MultiBaseCalc/Views/Home/Privacy.cshtml
+++ b/MultiBaseCalc/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "How to use?";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Just write information that you need and it it will done the thing!</p>
