--- a/MultiBaseCalc/Views/Conversion/Index.cshtml
+++ b/MultiBaseCalc/Views/Conversion/Index.cshtml
@@ -1,31 +1,30 @@
 ﻿@using (Html.BeginForm("ConvertNumber", "Conversion", FormMethod.Post))
 {
-    <div>
-        <label>Число:</label>
-        <input type="text" name="number" />
-    </div>
+    @using (Html.BeginForm("ConvertNumber", "Conversion", FormMethod.Post))
+    {
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-    <div>
-        <label>Вихідна система числення:</label>
-        <select name="fromBase">
-            @foreach (var baseValue in ViewBag.Bases as List<int>)
-            {
-                <option value="@baseValue">@baseValue</option>
-            }
-        </select>
-    </div>
+        <div class="form-group mb-3">
+            <label class="form-label">Number:</label>
+            @Html.TextBox("number", null, new { @class = "form-control", required = "required" })
+        </div>
 
-    <div>
-        <label>Цільова система числення:</label>
-        <select name="toBase">
-            @foreach (var baseValue in ViewBag.Bases as List<int>)
-            {
-                <option value="@baseValue">@baseValue</option>
-            }
-        </select>
-    </div>
+        <div class="form-group mb-3">
+            <label class="form-label">Source Base:</label>
+            @Html.DropDownList("fromBase",
+                    new SelectList(ViewBag.Bases),
+                    new { @class = "form-select" })
+        </div>
 
-    <button type="submit">Перевести</button>
+        <div class="form-group mb-3">
+            <label class="form-label">Target Base:</label>
+            @Html.DropDownList("toBase",
+                    new SelectList(ViewBag.Bases),
+                    new { @class = "form-select" })
+        </div>
+
+        <button type="submit" class="btn btn-primary mt-3">Convert</button>
+    }
 }
 
 @if (ViewBag.Result != null)
