--- a/MultiBaseCalc/Views/Shared/_Layout.cshtml
+++ b/MultiBaseCalc/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - MultiBaseCalc</title>
-    <link rel="icon" type="image/x-icon" href="~/wwwroot/favicon.jpg" />
+    <link rel="icon" type="image/x-icon" href="~/favicon.jpg" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/StyleSheet.css" asp-append-version="true" />
